--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,7 @@
+/*resources/css/app.css*/
+
+@import './../../vendor/power-components/livewire-powergrid/dist/tailwind.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
